force-app/main/default/objects/Shelter__c/fields/Capacity_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Utilization__c</fullName>
    <formula>IF( Capacity__c  &gt; 0,  Current_Occupancy__c  /  Capacity__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Utilization</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>