force-app/main/default/objects/Shelter__c/fields/Current_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Occupancy</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>