force-app/main/default/objects/Shelter__c/fields/Shelter_Status__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Status__c</fullName>
    <label>Shelter Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>