force-app/main/default/objects/Shelter__c/fields/Special_Needs_Support__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Support__c</fullName>
    <label>Special Needs Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Elderly</fullName>
            </value>
            <value>
                <fullName>Pets</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Family Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>