force-app/main/default/objects/Shelter__c/validationRules/Current_Occupancy_Within_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Occupancy_Within_Capacity</fullName>
    <active>true</active>
    <description>Current occupancy cannot exceed total capacity</description>
    <errorConditionFormula>Current_Occupancy__c  &gt;  Capacity__c</errorConditionFormula>
    <errorDisplayField>Current_Occupancy__c</errorDisplayField>
    <errorMessage>Current occupancy cannot exceed total capacity</errorMessage>
</ValidationRule>